# titan4rec_pytorch

./: .gitignore  CLAUDE.md  README.md  config.py  pyproject.toml  run_all.sh  train.py
data/: dataset.py  preprocess.py
model/: evaluate.py  lit_module.py
model/baseline/: bert4rec.py  mamba4rec.py  sasrec.py
model/proposed/: __init__.py  attention.py  embedding.py  long_term_memory.py  mac_block.py  titan4rec.py
results/: ml-100k_results.csv  ml-1m_results.csv
