[project]
name = "titan4rec"
version = "0.1.0"
description = "Titan4Rec: Memory as a Context (MAC) for Sequential Recommendation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "lightning>=2.2",
    "pandas>=1.4",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "wandb>=0.19",
]

[tool.uv]
package = false
